--- a/market/templates/market/index.html
+++ b/market/templates/market/index.html
@@ -1,10 +1,6 @@
 {% extends 'base.html' %}
 <!-- . -->
-{% block title %}
-<!-- . -->
-Home
-<!-- . -->
-{% endblock %}
+{% block title %} Home {% endblock %}
 <!-- . -->
 {% block main %}
 <!-- . -->
