--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,19 @@
       <title>{% block title %}{% endblock %} | Market</title>
    </head>
    <body>
+      <header>
+         <nav>
+            <ul>
+               <li class="logo"><a href="">DjangoApp</a></li>
+               <li><a href="">Home</a></li>
+               <li><a href="">Market</a></li>
+            </ul>
+            <ul>
+               <li><a href="">Login</a></li>
+               <li><a href="">Sign up</a></li>
+            </ul>
+         </nav>
+      </header>
       <main>{% block main %} {% endblock %}</main>
    </body>
 </html>
