Media folder and img url in items

--- a/market/templates/market/item_list.html
+++ b/market/templates/market/item_list.html
@@ -12,6 +12,7 @@
    <li>
       <p>{{ item.name }}</p>
       <p>{{ item.price }}</p>
+      <img src="{{ item.image_url }} " alt="" />
    </li>
    {% endfor %}
 </ul>
