--- a/assets/scss/elements/_initial.scss
+++ b/assets/scss/elements/_initial.scss
@@ -1,5 +1,161 @@
 /*■■■■■■■■■■■■■■■■■■■■■■■■■  */
+@use "../utils/" as *;
+
+/*■■■■■■■■■■■■■■■■■■■■■■■■■  */
+
+.msg {
+   max-width: 700px;
+   padding: 10px;
+   border-radius: 5px;
+   text-align: center;
+   font-size: 0.9rem;
+   border: 1px solid rgba(#fff, 0.2);
+   margin: 0 auto 5px;
+}
+.msg.danger {
+   border: 1px solid orangered;
+}
+.msg.success {
+   border: 1px solid green;
+}
+.no-a {
+   pointer-events: none;
+}
+
+/*■■■■■■■■■■■■■■■■■■■■■■ Register form */
+.frm-rgs {
+   max-width: 400px;
+   margin: 0 auto;
+   padding: 10px;
+   & > * {
+      display: block;
+      width: 100%;
+      outline: none;
+   }
+   input {
+      font-size: 1rem;
+      padding: 5px;
+      margin-bottom: 10px;
+      border-radius: 5px;
+   }
+   .btn {
+      background: darkblue;
+      color: #fff;
+      font-weight: bold;
+      border: 1px solid blue;
+      cursor: pointer;
+   }
+}
 /*■■■■■■■■■■■■■■■■■■■■■■■■■  */
 /*■■■■■■■■■■■■■■■■■■■■■■■■■  */
+.box {
+   display: grid;
+   grid-template-columns: 70% 30%;
+   grid-gap: 15px;
+}
+.lst-items {
+   li {
+      display: grid;
+      grid-template-columns: 2fr 1fr 1fr 0.8fr;
+      align-items: center;
+      border: 1px solid rgba(#fff, 0.2);
+      padding: 5px;
+      margin-bottom: 5px;
+      &:first-child {
+         background: #333;
+         font-weight: bold;
+         border: none;
+      }
+      .opts {
+         display: inline-block;
+         background: #222;
+         padding: 5px;
+         margin-right: 10px;
+         cursor: pointer;
+         &:hover {
+            box-shadow: 0 0 0 1px rgba(#fff, 0.8);
+         }
+      }
+   }
+   img {
+      height: 50px;
+   }
+}
+.lst-buy {
+   border: 1px solid rgba(#fff, 0.2);
+   align-self: start;
+   li {
+      padding: 5px;
+      margin-bottom: 5px;
+      display: flex;
+      &:first-child {
+         background: #333;
+         font-weight: bold;
+      }
+   }
+   .name {
+      flex: 1;
+   }
+   .sell {
+      background: #222;
+      padding: 5px 10px;
+      cursor: pointer;
+      &:hover {
+         box-shadow: 0 0 0 1px rgba(#fff, 0.8);
+      }
+   }
+}
+
+/*■■■■■■■■■■■■■■■■■■■■■■■■■  */
+.infoModal,
+.buyModal,
+.sellModal {
+   @extend %modal;
+   .popup {
+      position: relative;
+      top: 20%;
+      left: 50%;
+      transform: translate(-50%, 0);
+      width: 350px;
+      border: 1px solid #fff;
+      background: #111;
+      p {
+         padding: 5px 20px;
+      }
+   }
+   h3 {
+      padding: 10px 20px;
+      background: #ddd;
+      color: #000;
+      text-align: center;
+      margin-bottom: 10px;
+   }
+   .close,
+   input[type="submit"] {
+      outline: none;
+      border: 1px solid rgba(#fff, 0.4);
+      padding: 10px 15px;
+      font-size: 1rem;
+      font-weight: bold;
+      background: #000;
+      color: #fff;
+      display: inline-block;
+      margin: 10px auto;
+      cursor: pointer;
+      &:hover {
+         background: #fff;
+         color: #000;
+      }
+   }
+   .actions {
+      text-align: center;
+   }
+}
+/*■■■■■■■■■■■■■■■■■■■■■■  */
+
+/*■■■■■■■■■■■■■■■■■■■■■■  */
+.active {
+   display: block;
+}
 /*■■■■■■■■■■■■■■■■■■■■■■■■■  */
 /*■■■■■■■■■■■■■■■■■■■■■■■■■  */
