--- a/assets/scss/utils/_declarations.scss
+++ b/assets/scss/utils/_declarations.scss
@@ -1,4 +1,13 @@
 /*■■■■■■■■■■■■■■■■■■■■■■■■■  */
+%modal {
+   position: fixed;
+   top: 0;
+   left: 0;
+   width: 100vw;
+   height: 100vh;
+   background: rgba(#000, 0.8);
+   display: none;
+}
 /*■■■■■■■■■■■■■■■■■■■■■■■■■  */
 /*■■■■■■■■■■■■■■■■■■■■■■■■■  */
 /*■■■■■■■■■■■■■■■■■■■■■■■■■  */
