--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="{% static 'css/main.css' %} " />
+      <link rel="stylesheet" href="{% static 'css/main.css' %}" />
+      <script src="{% static 'js/script.js' %}" defer></script>
       <title>{% block title %}{% endblock %} | Market</title>
    </head>
    <body>
@@ -24,6 +25,16 @@
             </ul>
          </nav>
       </header>
-      <main>{% block main %} {% endblock %}</main>
+      <main>
+         {% if messages %}
+         <!-- . -->
+         {% for msg in messages %}
+         <div class="msg">{{ msg }}</div>
+         {% endfor %}
+         <!-- . -->
+         {% endif %}
+         <!-- . -->
+         {% block main %} {% endblock %}
+      </main>
    </body>
 </html>
