--- a/market/templates/market/includes/item_modal.html
+++ b/market/templates/market/includes/item_modal.html
@@ -26,6 +26,7 @@
                type="hidden"
                value="{{ item.name }}"
             />
+            <input type="submit" value="Buy" />
             <button type="button" class="close">Close</button>
          </div>
       </form>
