--- a/market/templates/market/register.html
+++ b/market/templates/market/register.html
@@ -5,15 +5,16 @@
 {% block main %}
 <!-- . -->
 <h1>Create Account</h1>
-<form action="" method="post">
+<form method="post" class="frm-rgs">
    {% csrf_token %}
    <label for="username">User name:</label>
    <input type="text" name="username" />
    <label for="password1">Password:</label>
-   <input type="text" name="password1" />
+   <input type="password" name="password1" />
    <label for="password2">Confirm password:</label>
-   <input type="text" name="password2" />
-   <button type="submit">Create account</button>
+   <input type="password" name="password2" />
+   <input type="submit" value="Register" />
 </form>
+<p>Already have an account...? <a href="{% url 'market:login' %} ">Login</a></p>
 <!-- . -->
 {% endblock %}
