--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
             <ul>
                <li><a href="{% url 'market:login' %} ">Login</a></li>
                <li><a href="{% url 'market:register' %} ">Sign up</a></li>
+               <li><a href="{% url 'market:logout' %} ">Logout</a></li>
             </ul>
          </nav>
       </header>
