--- a/market/templates/market/login.html
+++ b/market/templates/market/login.html
@@ -8,7 +8,7 @@
 <form method="post" class="frm-rgs">
    {% csrf_token %}
    <label for="username">User name:</label>
-   <input type="password" name="username" />
+   <input type="text" name="username" />
    <label for="password1">Password:</label>
    <input type="password" name="password" />
    <input type="submit" value="Login" />
